# loans

./: Makefile  README.md  celerybeat-schedule  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml  run_linters.sh  seed.py  seed_del.py
CI-templates/: build-template.yml  coverage-tests-template.yml  deploy-template-dev.yml  deploy-template-prod.yml  deploy-template-test.yml  pre-merge-tests-template.yml  sonar-check-template.yml
alembic/: env.py
alembic/versions/: 772b465a1ad6_creating_tables.py
app/: logging.py  main.py  utils.py
app/api/: api.py  deps.py
app/api/endpoints/: loan_products.py  loans.py
app/celery_loans/: tasks.py  worker.py
app/core/: config.py
app/crud/: base.py  crud_loan.py  crud_loan_product.py  utils.py
app/db/: session.py
app/models/: __init__.py  loan.py  loan_product.py
app/schemas/: __init__.py  base.py  loan.py  loan_products.py
app/tests/: conftest.py  test_get_all_loans.py  test_loan_products.py
app/tests/fixtures/: base_fixtures.py
docker/: Dockerfile.py-loans  Dockerfile.py-loans-celery  Dockerfile.py-loans-consumer
docker/docker_local/: Dockerfile  Dockerfile.consumer  Dockerfile.flower
kafka_core/: consumer.py  enums.py  handlers.py  producer.py
